--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^5.10.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
-    "next": "12.0.10",
+    "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
