--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.10.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "@tanstack/react-query": "^4.2.3",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "react": "17.0.2",
