--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:db": "prisma generate",
     "push:db": "prisma db push",
     "format": "prettier --write .",
+    "lint": "eslint .",
     "start": "next start"
   },
   "keywords": [],
@@ -34,6 +35,8 @@
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.8",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
