Add Google Provider

--- a/local.env
+++ b/local.env
@@ -1,6 +1,11 @@
 DATABASE_URL=
-GITHUB_ID=
-GITHUB_SECRET=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 NEXTAUTH_BYPASS=
+
+# NextAuth Providers
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
+
+GITHUB_ID=
+GITHUB_SECRET=
