--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@tanstack/react-query": "^4.2.3",
+    "@xstate/react": "^3.0.1",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "xstate": "^4.33.4"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
