--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format:code": "prettier --write .",
     "format:prisma": "prisma format",
     "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "start": "next start"
   },
   "keywords": [],
@@ -38,13 +39,15 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
