--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "^8.23.0",
+    "eslint": "^8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
