--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.10.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/material": "^5.10.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
@@ -35,7 +36,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
     "react-markdown": "8.0.0",
-    "xstate": "^4.33.4"
+    "xstate": "^4.33.4",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
