--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "build:db": "prisma generate",
     "build:docker": "docker build -t nextjs-docker .",
+    "cypress:open": "CYPRESS_BASE_URL=http://localhost:3000 cypress open",
     "docker:up": "docker-compose up -d --build",
     "docker:down": "docker-compose down",
     "docker:wait-and-migrate": "wait-on http-get://localhost:5432 && npm run db:migrate",
@@ -45,13 +46,17 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
+    "cypress": "^10.7.0",
+    "cypress-social-logins": "^1.14.0",
     "eslint": "^8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
