--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres:
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=planner
     ports:
-      - "5432:5432"
+      - '5432:5432'
   web:
     env_file: .env
     build:
@@ -19,13 +19,13 @@ services:
       dockerfile: Dockerfile
     container_name: web
     restart: always
-    command: ["./wait-for-it.sh", "postgres:5432", "--", "npm", "run", "dev"]
+    command: ['./wait-for-it.sh', 'postgres:5432', '--', 'npm', 'run', 'dev']
     volumes:
       - ./:/app
       - /app/node_modules
       - /app/.next
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - postgres
   migration:
@@ -34,7 +34,8 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: migration
-    command: [ "./wait-for-it.sh", "postgres:5432", "--", "npm", "run", "db:migrate" ]
+    command:
+      ['./wait-for-it.sh', 'postgres:5432', '--', 'npm', 'run', 'db:migrate']
     volumes:
       - ./:/app
       - /app/node_modules
