--- a/package.json
+++ b/package.json
@@ -25,19 +25,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.10.0",
+    "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.9.7",
-    "@mui/material": "^5.10.2",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@tanstack/react-query": "^4.2.3",
+    "@uiw/react-md-editor": "^3.6.0",
     "@xstate/react": "^3.0.1",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
+    "next-remove-imports": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.34.2",
