--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "next start",
-    "check": "npm run format && npm run lint && npm run build"
+    "check": "npm run format && npm run lint && npm run build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [],
   "author": "",
@@ -49,23 +51,37 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
     "@testing-library/cypress": "^8.0.3",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
     "cypress": "^10.7.0",
     "cypress-social-logins": "^1.14.0",
-    "eslint": "^8.22.0",
+    "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-storybook": "^0.6.4",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.5",
     "wait-on": "^6.0.1"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
