--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
     "@tanstack/react-query": "^4.2.3",
+    "@uiw/react-markdown-preview": "^4.1.0",
     "@uiw/react-md-editor": "^3.6.0",
     "@xstate/react": "^3.0.1",
     "clsx": "^1.2.1",
@@ -46,6 +47,7 @@
     "next-remove-imports": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-foco": "^1.3.1",
     "react-hook-form": "^7.34.2",
     "react-markdown": "8.0.0",
     "xstate": "^4.33.4",
@@ -65,6 +67,7 @@
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "cypress": "^10.7.0",
