--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "@uiw/react-md-editor": "^3.6.0",
     "@xstate/react": "^3.0.1",
     "clsx": "^1.2.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "next-remove-imports": "^1.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flow-renderer": "^10.3.16",
     "react-foco": "^1.3.1",
     "react-hook-form": "^7.34.2",
     "react-markdown": "8.0.0",
@@ -63,6 +66,7 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@testing-library/cypress": "^8.0.3",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
