--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/material": "^5.10.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.2.3",
     "@uiw/react-markdown-preview": "^4.1.0",
     "@uiw/react-md-editor": "^3.6.0",
