Allow export to image

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@xstate/react": "^3.0.1",
     "bullmq": "^1.90.2",
     "clsx": "^1.2.1",
+    "html-to-image": "^1.10.8",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "next": "^12.2.5",
