--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@portabletext/react": "^1.0.6",
     "@prisma/client": "^4.2.1",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.2.3",
     "@uiw/react-markdown-preview": "^4.1.0",
@@ -50,6 +53,7 @@
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "next-remove-imports": "^1.0.7",
+    "next-sanity": "^0.8.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.16",
@@ -68,6 +72,7 @@
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
+    "@tailwindcss/typography": "^0.5.7",
     "@testing-library/cypress": "^8.0.3",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "17.0.14",
