--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@portabletext/react": "^1.0.6",
     "@prisma/client": "^4.2.1",
+    "@sanity/asset-utils": "^1.3.0",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
