--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-auth": "^4.10.3",
     "next-remove-imports": "^1.0.7",
     "next-sanity": "^0.8.4",
+    "next-sanity-image": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.16",
