--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -19,6 +19,8 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
+
+
 jobs:
   # Build job
   build:
@@ -68,7 +70,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} run lint
       - name: Build with Next.js
         env:
-          NEXT_PUBLIC_SANITY_PROJECT_ID: ${{secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }}
-          NEXT_PUBLIC_SANITY_DATASET: ${{secrets.NEXT_PUBLIC_SANITY_DATASET}}
-          NEXT_PUBLIC_SANITY_TOKEN: ${{secrets.NEXT_PUBLIC_SANITY_TOKEN}}
+          NEXT_PUBLIC_SANITY_PROJECT_ID: '${{secrets.NEXT_PUBLIC_SANITY_PROJECT_ID }}'
+          NEXT_PUBLIC_SANITY_DATASET: '${{secrets.NEXT_PUBLIC_SANITY_DATASET}}'
+          NEXT_PUBLIC_SANITY_TOKEN: '${{secrets.NEXT_PUBLIC_SANITY_TOKEN}}'
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
