--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/cypress": "^8.0.3",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/md5": "^2.3.2",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
