--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "next-remove-imports": "^1.0.7",
+    "next-s3-upload": "^0.2.3",
     "next-sanity": "^0.8.4",
     "next-sanity-image": "^4.1.0",
     "react": "17.0.2",
@@ -62,6 +63,7 @@
     "react-flow-renderer": "^10.3.16",
     "react-foco": "^1.3.1",
     "react-hook-form": "^7.34.2",
+    "react-image-file-resizer": "^0.4.8",
     "react-markdown": "8.0.0",
     "xstate": "^4.33.4",
     "zod": "^3.18.0"
