Add database seed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "docker:wait-and-migrate": "wait-on http-get://localhost:5432 && npm run db:migrate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
+    "db:backup": "cd database && docker exec -t postgres pg_dumpall -c -U postgres > dump_`date +%d-%m-%Y\"_\"%H_%M_%S`.sql && rm backup.sql ",
+    "db:restore": "cat database/backup.sql | docker exec -i postgres psql -U root",
+    "db:reset": "prisma migrate reset",
     "format": "npm run format:code && npm run format:prisma",
     "format:code": "prettier --write .",
     "format:prisma": "prisma format",
@@ -101,6 +104,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
+    "shelljs": "^0.8.5",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.5",
