--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/md5": "^2.3.2",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@zeit/next-css": "^1.0.1",
