Add npm scripts for headless E2E tests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:db": "prisma generate",
     "build:docker": "docker build -t nextjs-docker .",
     "cypress:open": "CYPRESS_BASE_URL=http://localhost:3000 cypress open",
+    "cypress:headless": "CYPRESS_BASE_URL=http://localhost:3000  cypress run",
     "docker:up": "docker-compose up -d --build",
     "docker:down": "docker-compose down",
     "docker:wait-and-migrate": "wait-on http-get://localhost:5432 && npm run db:migrate",
@@ -16,6 +17,8 @@
     "db:backup": "cd database && docker exec -t postgres pg_dumpall -c -U postgres > dump_`date +%d-%m-%Y\"_\"%H_%M_%S`.sql && rm backup.sql ",
     "db:restore": "cat database/backup.sql | docker exec -i postgres psql -U root",
     "db:reset": "prisma migrate reset",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress:open",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
     "format": "npm run format:code && npm run format:prisma",
     "format:code": "prettier --write .",
     "format:prisma": "prisma format",
@@ -95,7 +98,7 @@
     "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
-    "cypress": "^10.7.0",
+    "cypress": "^10.9.0",
     "cypress-social-logins": "^1.14.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
@@ -106,6 +109,7 @@
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
     "shelljs": "^0.8.5",
+    "start-server-and-test": "^1.14.0",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.5",
