--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "next",
+    "dev:logs": "next > server-logs.txt",
     "build": "npm run db:migrate && npm run build:db && next build",
     "build:db": "prisma generate",
     "build:docker": "docker build -t nextjs-docker .",
@@ -18,14 +19,14 @@
     "db:restore": "cat database/backup.sql | docker exec -i postgres psql -U root",
     "db:reset": "prisma migrate reset",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress:open",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
+    "e2e:headless": "start-server-and-test dev:logs http://localhost:3000 cypress:headless",
     "format": "npm run format:code && npm run format:prisma",
     "format:code": "prettier --write .",
     "format:prisma": "prisma format",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "start": "next start",
-    "check": "npm run format && npm run lint && npm run build",
+    "check": "npm run format && npm run lint && npm run build && npm run e2e:headless",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
