--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "next-sanity": "^0.8.4",
     "next-sanity-image": "^4.1.0",
     "react": "17.0.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.16",
     "react-foco": "^1.3.1",
@@ -80,6 +82,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.1",
     "@babel/core": "^7.18.13",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
