--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   "license": "MIT",
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
-    "@dnd-kit/core": "^6.0.5",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
@@ -65,6 +64,7 @@
     "md5": "^2.3.0",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
+    "next-compose-plugins": "^2.2.1",
     "next-remove-imports": "^1.0.7",
     "next-s3-upload": "^0.2.3",
     "next-sanity": "^0.8.4",
@@ -110,6 +110,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.6.4",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prisma": "^4.2.1",
