--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
     "dev": "next",
     "dev:logs": "next > server-logs.txt",
     "build": "npm run db:migrate && npm run build:db && next build",
@@ -84,6 +87,7 @@
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^2.2.1",
     "@babel/core": "^7.18.13",
+    "@next/bundle-analyzer": "^12.3.1",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
@@ -103,6 +107,7 @@
     "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
     "cypress": "^10.9.0",
     "cypress-social-logins": "^1.14.0",
     "eslint": "8.22.0",
