--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query-devtools": "^4.10.1",
     "@uiw/react-markdown-preview": "^4.1.0",
     "@uiw/react-md-editor": "^3.6.0",
     "@xstate/react": "^3.0.1",
