--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-hook-form": "^7.34.2",
     "react-image-file-resizer": "^0.4.8",
     "react-markdown": "8.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "xstate": "^4.33.4",
     "zod": "^3.18.0"
   },
@@ -102,6 +103,7 @@
     "@types/md5": "^2.3.2",
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
