--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@mui/x-data-grid": "^5.17.5",
     "@mui/x-date-pickers": "^5.0.3",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@portabletext/react": "^1.0.6",
