--- a/local.env
+++ b/local.env
@@ -1,11 +1,32 @@
+BASE_URL=
 DATABASE_URL=
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
+CYPRESS_BASE_URL=
+
+# Second database in order to keep track of how to create migrations
+SHADOW_DATABASE_URL=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 NEXTAUTH_BYPASS=
 
-# NextAuth Providers
+# NextAuth Providers, configure applications online and provide credentials here
 GOOGLE_AUTH_CLIENT_ID=
 GOOGLE_AUTH_CLIENT_SECRET=
-
 GITHUB_ID=
 GITHUB_SECRET=
+SENDGRID_API_KEY=
+EMAIL_FROM_ADDRESS=
+TEST_ENVIRONMENT_EMAIL_TO_ADDRESS=
+
+# Credentials for Sanity.io blog
+NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_DATASET=
+NEXT_PUBLIC_SANITY_TOKEN=
+
+# AWS S3 credentials for uploading
+S3_UPLOAD_KEY=
+S3_UPLOAD_SECRET=
+S3_UPLOAD_BUCKET=
+S3_UPLOAD_REGION=
