--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "next-s3-upload": "^0.2.3",
     "next-sanity": "^0.8.4",
     "next-sanity-image": "^4.1.0",
+    "next-themes": "^0.2.1",
     "react": "17.0.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
