Fix query invalidation

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bullmq": "^1.90.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "downshift": "^6.1.12",
     "html-to-image": "^1.10.8",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
