--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bullmq": "^1.90.2",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
+    "downshift": "^6.1.12",
     "html-to-image": "^1.10.8",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
@@ -74,6 +75,7 @@
     "next-s3-upload": "^0.2.3",
     "next-sanity": "^0.8.4",
     "next-sanity-image": "^4.1.0",
+    "next-themes": "^0.2.1",
     "react": "17.0.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
