--- a/package.json
+++ b/package.json
@@ -81,12 +81,12 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
-    "react-flow-renderer": "^10.3.16",
     "react-foco": "^1.3.1",
     "react-hook-form": "^7.34.2",
     "react-image-file-resizer": "^0.4.8",
     "react-markdown": "8.0.0",
     "react-syntax-highlighter": "^15.5.0",
+    "reactflow": "^11.1.1",
     "xstate": "^4.33.4",
     "zod": "^3.18.0"
   },
