--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "prisma": "^4.2.1",
     "shelljs": "^0.8.5",
     "start-server-and-test": "^1.14.0",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.5.5",
     "wait-on": "^6.0.1"
