--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,8 +1,9 @@
 # As found on https://dev.to/kouts/deploy-storybook-to-github-pages-3bij
 name: Build and Deploy
 on:
+  # Runs on pushes targeting the default branch
   push:
-    paths: ["stories/**", "src/components/**"] # Trigger the action only when files change in the folders defined here
+    branches: [ 'main' ]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
