--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 on:
   # Runs on pushes targeting the default branch
   push:
-    paths: [ "src/stories/**", "src/components/**" ] # Trigger the action only when files change in the folders defined here
+    paths: ['src/stories/**', 'src/components/**'] # Trigger the action only when files change in the folders defined here
     branches: ['main']
 jobs:
   build-and-deploy:
